--- a/project.json
+++ b/project.json
@@ -303,13 +303,27 @@
 		"1nvader_Pokitto.elf": {},
 		"My_settings.h": {},
 		"main.cpp": {},
+		"music": {},
 		"project.json": {},
 		"src": {},
+		"music/1nvad_00.raw": {},
+		"music/1nvad_01.raw": {},
+		"music/bomb_hitground.mp3": {},
+		"music/clear_Wave.mp3": {},
+		"music/drop_bomb.mp3": {},
+		"music/game_over.mp3": {},
+		"music/hover.mp3": {},
+		"music/laser.mp3": {},
+		"music/level_cleared.mp3": {},
+		"music/player_hit.mp3": {},
+		"music/mini_explosion.mp3": {},
+		"music/theme.mp3": {},
+		"music/tractor_beam.mp3": {},
 		"src/Invader.cpp": {},
-		"src/Invader_Game.cpp": {},
-		"src/Invader_GameOver.cpp": {},
 		"src/Invader.h": {},
+		"src/Invader_Game.cpp": {},
 		"src/Invader_Particles.cpp": {},
+		"src/Invader_GameOver.cpp": {},
 		"src/Invader_SplashScreen.cpp": {},
 		"src/Invader_Title.cpp": {},
 		"src/Invader_TugOfWar.cpp": {},
@@ -320,51 +334,54 @@
 		"src/utils": {},
 		"src/entities/Bomb.h": {},
 		"src/entities/Entities.h": {},
+		"src/entities/Mothership.h": {},
 		"src/entities/Particle.h": {},
 		"src/entities/Player.h": {},
-		"src/entities/Mothership.h": {},
+		"src/images/Controls.h": {},
 		"src/images/Explosion.h": {},
 		"src/images/GameOver.h": {},
 		"src/images/Images.h": {},
 		"src/images/Mothership.h": {},
-		"src/images/Controls.h": {},
 		"src/images/Numbers.h": {},
 		"src/images/PPOT.h": {},
 		"src/images/Player.h": {},
 		"src/images/Title.h": {},
 		"src/images/controls": {},
 		"src/images/explosion": {},
-		"src/images/mothership": {},
 		"src/images/gameover": {},
+		"src/images/mothership": {},
 		"src/images/numbers": {},
 		"src/images/player": {},
 		"src/images/ppot": {},
 		"src/images/title": {},
+		"src/sounds/Bomb_HitGround.h": {},
+		"src/sounds/Bomb_HitGround.raw": {},
+		"src/sounds/Drop_Bomb.h": {},
+		"src/sounds/Laser.h": {},
+		"src/sounds/Laser.raw": {},
+		"src/sounds/Level_Cleared.h": {},
+		"src/sounds/Level_Cleared.raw": {},
+		"src/sounds/Mini_Explosion.h": {},
+		"src/sounds/Mini_Explosion.raw": {},
+		"src/sounds/Player_Hit.h": {},
+		"src/sounds/Player_Hit.raw": {},
 		"src/sounds/Sounds.h": {},
-		"src/sounds/Tone_00.h": {},
-		"src/sounds/Tone_01.h": {},
-		"src/sounds/Tone_02.h": {},
-		"src/sounds/Tone_03.h": {},
-		"src/sounds/Tone_05.h": {},
-		"src/sounds/Tone_07.h": {},
-		"src/sounds/Tone_04.h": {},
-		"src/sounds/Tone_06.h": {},
-		"src/sounds/Tone_08.h": {},
-		"src/sounds/Tone_09.h": {},
+		"src/sounds/drop_bomb.raw": {},
+		"src/sounds/rawtobin.js": {},
 		"src/utils/Constants.h": {},
 		"src/utils/Enums.h": {},
 		"src/utils/GameCookie.h": {},
 		"src/utils/Structs.h": {},
 		"src/utils/Utils.h": {},
-		"src/images/controls/Sound_Both_Grey.h": {},
-		"src/images/controls/Sound_Both_Grey.png": {},
 		"src/images/controls/Sound_Both_White.h": {},
+		"src/images/controls/Sound_Both_Grey.png": {},
 		"src/images/controls/Sound_Both_White.png": {},
 		"src/images/controls/Sound_Music_Grey.h": {},
 		"src/images/controls/Sound_Music_Grey.png": {},
-		"src/images/controls/Sound_Music_White.h": {},
 		"src/images/controls/Sound_Music_White.png": {},
+		"src/images/controls/Sound_Music_White.h": {},
 		"src/images/controls/Sound_None_Grey.h": {},
+		"src/images/controls/Sound_Both_Grey.h": {},
 		"src/images/controls/Sound_None_Grey.png": {},
 		"src/images/controls/Sound_None_White.h": {},
 		"src/images/controls/Sound_None_White.png": {},
@@ -376,17 +393,17 @@
 		"src/images/explosion/Particle.png": {},
 		"src/images/explosion/landscape": {},
 		"src/images/explosion/portrait": {},
-		"src/images/mothership/landscape": {},
-		"src/images/mothership/portrait": {},
 		"src/images/gameover/landscape": {},
 		"src/images/gameover/portrait": {},
+		"src/images/mothership/landscape": {},
+		"src/images/mothership/portrait": {},
 		"src/images/numbers/landscape": {},
 		"src/images/numbers/portrait": {},
-		"src/images/player/portrait": {},
-		"src/images/ppot/Ppot_00.h": {},
 		"src/images/player/landscape": {},
+		"src/images/player/portrait": {},
 		"src/images/ppot/Ppot_00.png": {},
 		"src/images/ppot/Ppot_01.h": {},
+		"src/images/ppot/Ppot_00.h": {},
 		"src/images/ppot/Ppot_01.png": {},
 		"src/images/ppot/Ppot_02.h": {},
 		"src/images/ppot/Ppot_02.png": {},
@@ -398,14 +415,18 @@
 		"src/images/ppot/Ppot_Full.png": {},
 		"src/images/title/landscape": {},
 		"src/images/title/portrait": {},
-		"src/images/explosion/landscape/Explosion_00.h": {},
-		"src/images/explosion/landscape/Explosion_00.png": {},
-		"src/images/explosion/landscape/Explosion_01.h": {},
-		"src/images/explosion/landscape/Explosion_01.png": {},
 		"src/images/explosion/portrait/Explosion_00.h": {},
 		"src/images/explosion/portrait/Explosion_00.png": {},
 		"src/images/explosion/portrait/Explosion_01.h": {},
 		"src/images/explosion/portrait/Explosion_01.png": {},
+		"src/images/gameover/landscape/GameOver.h": {},
+		"src/images/gameover/landscape/GameOver.png": {},
+		"src/images/gameover/portrait/GameOver.h": {},
+		"src/images/gameover/portrait/GameOver.png": {},
+		"src/images/explosion/landscape/Explosion_00.h": {},
+		"src/images/explosion/landscape/Explosion_00.png": {},
+		"src/images/explosion/landscape/Explosion_01.h": {},
+		"src/images/explosion/landscape/Explosion_01.png": {},
 		"src/images/mothership/landscape/2x2": {},
 		"src/images/mothership/landscape/3x3": {},
 		"src/images/mothership/landscape/4x4": {},
@@ -415,47 +436,40 @@
 		"src/images/mothership/landscape/MotherShip_00.png": {},
 		"src/images/mothership/landscape/MotherShip_01.h": {},
 		"src/images/mothership/landscape/MotherShip_01.png": {},
+		"src/images/mothership/landscape/MotherShip_02.h": {},
 		"src/images/mothership/landscape/MotherShip_02.png": {},
 		"src/images/mothership/landscape/MotherShip_03.h": {},
 		"src/images/mothership/landscape/MotherShip_03.png": {},
 		"src/images/mothership/portrait/2x2": {},
 		"src/images/mothership/portrait/3x3": {},
-		"src/images/mothership/portrait/4x4": {},
 		"src/images/mothership/portrait/Bomb.h": {},
 		"src/images/mothership/portrait/Bomb.png": {},
+		"src/images/mothership/portrait/4x4": {},
 		"src/images/mothership/portrait/normal": {},
 		"src/images/mothership/portrait/rotated": {},
-		"src/images/gameover/landscape/GameOver.h": {},
-		"src/images/gameover/landscape/GameOver.png": {},
-		"src/images/gameover/portrait/GameOver.h": {},
-		"src/images/gameover/portrait/GameOver.png": {},
 		"src/images/numbers/landscape/Number_0.h": {},
 		"src/images/numbers/landscape/Number_0.png": {},
 		"src/images/numbers/landscape/Number_1.h": {},
 		"src/images/numbers/landscape/Number_1.png": {},
 		"src/images/numbers/landscape/Number_2.h": {},
 		"src/images/numbers/landscape/Number_2.png": {},
-		"src/images/numbers/landscape/Number_3.h": {},
 		"src/images/numbers/landscape/Number_3.png": {},
+		"src/images/numbers/landscape/Number_3.h": {},
 		"src/images/numbers/landscape/Number_4.h": {},
 		"src/images/numbers/landscape/Number_4.png": {},
 		"src/images/numbers/landscape/Number_5.h": {},
 		"src/images/numbers/landscape/Number_5.png": {},
-		"src/images/numbers/landscape/Number_6.png": {},
 		"src/images/numbers/landscape/Number_6.h": {},
+		"src/images/numbers/landscape/Number_6.png": {},
 		"src/images/numbers/landscape/Number_7.h": {},
 		"src/images/numbers/landscape/Number_7.png": {},
 		"src/images/numbers/landscape/Number_8.h": {},
+		"src/images/numbers/landscape/Number_9.h": {},
 		"src/images/numbers/landscape/Number_8.png": {},
 		"src/images/numbers/landscape/Number_9.png": {},
-		"src/images/numbers/landscape/Number_9.h": {},
 		"src/images/numbers/portrait/normal": {},
-		"src/images/numbers/portrait/rotated": {},
-		"src/images/player/portrait/Laser.h": {},
-		"src/images/player/portrait/Laser.png": {},
-		"src/images/player/portrait/normal": {},
-		"src/images/player/portrait/rotated": {},
 		"src/images/player/landscape/Laser.h": {},
+		"src/images/numbers/portrait/rotated": {},
 		"src/images/player/landscape/Laser.png": {},
 		"src/images/player/landscape/Player.h": {},
 		"src/images/player/landscape/Player.png": {},
@@ -465,6 +479,10 @@
 		"src/images/player/landscape/Player_Explosion_01.png": {},
 		"src/images/player/landscape/Player_Explosion_02.h": {},
 		"src/images/player/landscape/Player_Explosion_02.png": {},
+		"src/images/player/portrait/Laser.h": {},
+		"src/images/player/portrait/Laser.png": {},
+		"src/images/player/portrait/normal": {},
+		"src/images/player/portrait/rotated": {},
 		"src/images/title/landscape/Ground.h": {},
 		"src/images/title/landscape/Ground.png": {},
 		"src/images/title/landscape/HighScore.h": {},
@@ -481,14 +499,14 @@
 		"src/images/title/landscape/LeftArrow_02.png": {},
 		"src/images/title/landscape/Lock.h": {},
 		"src/images/title/landscape/Lock.png": {},
-		"src/images/title/landscape/Mountain.png": {},
 		"src/images/title/landscape/Mountain.h": {},
+		"src/images/title/landscape/Mountain.png": {},
 		"src/images/title/landscape/Rotate.h": {},
 		"src/images/title/landscape/Rotate.png": {},
 		"src/images/title/landscape/SurvivalMode.h": {},
 		"src/images/title/landscape/SurvivalMode.png": {},
-		"src/images/title/landscape/TugOfWarMode.h": {},
 		"src/images/title/landscape/SurvivalMode_Highlight.h": {},
+		"src/images/title/landscape/TugOfWarMode.h": {},
 		"src/images/title/landscape/TugOfWarMode.png": {},
 		"src/images/title/landscape/TugOfWarMode_Highlight.h": {},
 		"src/images/title/landscape/VSMode.h": {},
@@ -522,7 +540,6 @@
 		"src/images/title/portrait/HighScore.png": {},
 		"src/images/title/portrait/Invader.h": {},
 		"src/images/title/portrait/Invader.png": {},
-		"src/images/mothership/landscape/MotherShip_02.h": {},
 		"src/images/title/portrait/Lock.h": {},
 		"src/images/title/portrait/Lock.png": {},
 		"src/images/title/portrait/Mountain_BOT.h": {},
@@ -549,25 +566,26 @@
 		"src/images/title/portrait/WaveCleared_03.h": {},
 		"src/images/title/portrait/WaveCleared_03.png": {},
 		"src/images/title/portrait/WaveCleared_04.h": {},
-		"src/images/title/portrait/WaveCleared_05.h": {},
 		"src/images/title/portrait/WaveCleared_04.png": {},
+		"src/images/title/portrait/WaveCleared_05.h": {},
 		"src/images/title/portrait/WaveCleared_05.png": {},
 		"src/images/title/portrait/WaveCleared_06.h": {},
 		"src/images/title/portrait/WaveCleared_06.png": {},
 		"src/images/mothership/landscape/2x2/MotherShip_Title_00.h": {},
 		"src/images/mothership/landscape/2x2/MotherShip_Title_00.png": {},
-		"src/images/mothership/landscape/2x2/MotherShip_Title_01.h": {},
 		"src/images/mothership/landscape/2x2/MotherShip_Title_01.png": {},
+		"src/images/mothership/landscape/2x2/MotherShip_Title_01.h": {},
 		"src/images/mothership/landscape/2x2/MotherShip_Title_02.h": {},
 		"src/images/mothership/landscape/2x2/MotherShip_Title_02.png": {},
 		"src/images/mothership/landscape/2x2/MotherShip_Title_03.h": {},
+		"src/images/mothership/landscape/2x2/MotherShip_Title_03.png": {},
 		"src/images/mothership/landscape/3x3/MotherShip_Title_00.h": {},
 		"src/images/mothership/landscape/3x3/MotherShip_Title_00.png": {},
 		"src/images/mothership/landscape/3x3/MotherShip_Title_01.h": {},
 		"src/images/mothership/landscape/3x3/MotherShip_Title_01.png": {},
 		"src/images/mothership/landscape/3x3/MotherShip_Title_02.h": {},
-		"src/images/mothership/landscape/3x3/MotherShip_Title_02.png": {},
 		"src/images/mothership/landscape/3x3/MotherShip_Title_03.h": {},
+		"src/images/mothership/landscape/3x3/MotherShip_Title_02.png": {},
 		"src/images/mothership/landscape/3x3/MotherShip_Title_03.png": {},
 		"src/images/mothership/landscape/4x4/MotherShip_Title_00.h": {},
 		"src/images/mothership/landscape/4x4/MotherShip_Title_00.png": {},
@@ -587,22 +605,22 @@
 		"src/images/mothership/portrait/2x2/MotherShip_Title_03.png": {},
 		"src/images/mothership/portrait/3x3/MotherShip_Title_00.h": {},
 		"src/images/mothership/portrait/3x3/MotherShip_Title_00.png": {},
+		"src/images/mothership/portrait/3x3/MotherShip_Title_01.h": {},
 		"src/images/mothership/portrait/3x3/MotherShip_Title_01.png": {},
 		"src/images/mothership/portrait/3x3/MotherShip_Title_02.h": {},
-		"src/images/mothership/portrait/3x3/MotherShip_Title_01.h": {},
 		"src/images/mothership/portrait/3x3/MotherShip_Title_02.png": {},
 		"src/images/mothership/portrait/3x3/MotherShip_Title_03.h": {},
 		"src/images/mothership/portrait/3x3/MotherShip_Title_03.png": {},
-		"src/images/mothership/portrait/4x4/MotherShip_Title_00.png": {},
 		"src/images/mothership/portrait/4x4/MotherShip_Title_00.h": {},
+		"src/images/mothership/portrait/4x4/MotherShip_Title_00.png": {},
 		"src/images/mothership/portrait/4x4/MotherShip_Title_01.h": {},
 		"src/images/mothership/portrait/4x4/MotherShip_Title_01.png": {},
 		"src/images/mothership/portrait/4x4/MotherShip_Title_02.h": {},
 		"src/images/mothership/portrait/4x4/MotherShip_Title_02.png": {},
 		"src/images/mothership/portrait/4x4/MotherShip_Title_03.h": {},
 		"src/images/mothership/portrait/4x4/MotherShip_Title_03.png": {},
-		"src/images/mothership/portrait/normal/MotherShip_00.png": {},
 		"src/images/mothership/portrait/normal/MotherShip_00.h": {},
+		"src/images/mothership/portrait/normal/MotherShip_00.png": {},
 		"src/images/mothership/portrait/normal/MotherShip_01.h": {},
 		"src/images/mothership/portrait/normal/MotherShip_01.png": {},
 		"src/images/mothership/portrait/normal/MotherShip_02.h": {},
@@ -615,8 +633,8 @@
 		"src/images/mothership/portrait/rotated/MotherShip_01.png": {},
 		"src/images/mothership/portrait/rotated/MotherShip_02.h": {},
 		"src/images/mothership/portrait/rotated/MotherShip_02.png": {},
-		"src/images/mothership/portrait/rotated/MotherShip_03.h": {},
 		"src/images/mothership/portrait/rotated/MotherShip_03.png": {},
+		"src/images/mothership/portrait/rotated/MotherShip_03.h": {},
 		"src/images/numbers/portrait/normal/Number_0.h": {},
 		"src/images/numbers/portrait/normal/Number_0.png": {},
 		"src/images/numbers/portrait/normal/Number_1.h": {},
@@ -627,8 +645,8 @@
 		"src/images/numbers/portrait/normal/Number_3.png": {},
 		"src/images/numbers/portrait/normal/Number_4.h": {},
 		"src/images/numbers/portrait/normal/Number_4.png": {},
-		"src/images/numbers/portrait/normal/Number_5.h": {},
 		"src/images/numbers/portrait/normal/Number_5.png": {},
+		"src/images/numbers/portrait/normal/Number_5.h": {},
 		"src/images/numbers/portrait/normal/Number_6.h": {},
 		"src/images/numbers/portrait/normal/Number_6.png": {},
 		"src/images/numbers/portrait/normal/Number_7.h": {},
@@ -647,17 +665,17 @@
 		"src/images/numbers/portrait/rotated/Number_3_Rot.png": {},
 		"src/images/numbers/portrait/rotated/Number_4_Rot.h": {},
 		"src/images/numbers/portrait/rotated/Number_4_Rot.png": {},
-		"src/images/numbers/portrait/rotated/Number_5_Rot.h": {},
 		"src/images/numbers/portrait/rotated/Number_5_Rot.png": {},
+		"src/images/numbers/portrait/rotated/Number_5_Rot.h": {},
 		"src/images/numbers/portrait/rotated/Number_6_Rot.h": {},
 		"src/images/numbers/portrait/rotated/Number_6_Rot.png": {},
 		"src/images/numbers/portrait/rotated/Number_7_Rot.h": {},
 		"src/images/numbers/portrait/rotated/Number_7_Rot.png": {},
 		"src/images/numbers/portrait/rotated/Number_8_Rot.h": {},
 		"src/images/numbers/portrait/rotated/Number_8_Rot.png": {},
+		"src/images/numbers/portrait/rotated/Number_9_Rot.h": {},
 		"src/images/numbers/portrait/rotated/Number_9_Rot.png": {},
 		"src/images/player/portrait/normal/Player.h": {},
-		"src/images/numbers/portrait/rotated/Number_9_Rot.h": {},
 		"src/images/player/portrait/normal/Player.png": {},
 		"src/images/player/portrait/normal/Player_Explosion_00.h": {},
 		"src/images/player/portrait/normal/Player_Explosion_00.png": {},
@@ -672,8 +690,7 @@
 		"src/images/player/portrait/rotated/Player_Explosion_01.h": {},
 		"src/images/player/portrait/rotated/Player_Explosion_01.png": {},
 		"src/images/player/portrait/rotated/Player_Explosion_02.h": {},
-		"src/images/player/portrait/rotated/Player_Explosion_02.png": {},
-		"src/images/mothership/landscape/2x2/MotherShip_Title_03.png": {}
+		"src/images/player/portrait/rotated/Player_Explosion_02.png": {}
 	},
 	"ideVersion": 10000,
 	"BUILDFlags": {
